# raspbian-buildstrapping

./: .gitignore  README.md  Toolchain-Raspbian.cmake  install_prereqs.sh
cmake-c/: CMakeLists.txt  README.md  main.c
cmake-cpp/: CMakeLists.txt  README.md  main.cpp
cmake-cpp-lib/: CMakeLists.txt  README.md  download_required.sh  main.cpp
